feat(02-01): add gspread dependency and Google Sheets config
- Add gspread>=6.0.0 and google-auth>=2.0.0 to requirements.txt
- Add google_credentials_json (SecretStr) and google_sheets_id to Settings
- Add JSON validation for Google credentials
- Update .env.example with Google Sheets placeholders

--- a/dolphin/.env.example
+++ b/dolphin/.env.example
@@ -6,3 +6,10 @@ DOLPHIN_API_URL=https://dolphin-anty-api.com
 REDDIT_USER_AGENT=DolphinTracker/2.0
 REDDIT_MIN_DELAY=2.0
 REDDIT_MAX_DELAY=5.0
+
+# Google Sheets sync (optional - for automatic sheet updates)
+# Get credentials from: Google Cloud Console -> Service Account -> Keys -> Create JSON key
+# Copy the entire JSON content here (on one line)
+GOOGLE_CREDENTIALS_JSON={"type":"service_account","project_id":"your-project",...}
+# Get sheet ID from URL: https://docs.google.com/spreadsheets/d/{THIS_ID}/edit
+GOOGLE_SHEETS_ID=your-spreadsheet-id-here
