--- a/dolphin/requirements.txt
+++ b/dolphin/requirements.txt
@@ -3,5 +3,9 @@ httpx>=0.28
 pydantic>=2.0
 pydantic-settings>=2.0
 
+# Phase 2: Google Sheets Sync
+gspread>=6.0.0
+google-auth>=2.0.0
+
 # Existing dependencies (from original tracker.py)
 requests>=2.28
