--- a/dolphin/.gitignore
+++ b/dolphin/.gitignore
@@ -13,6 +13,10 @@ __pycache__/
 karma_history.json
 tracking_*.csv
 
+# Logs (keep directory via .gitkeep)
+logs/*.log
+logs/*.log.*
+
 # IDE
 .vscode/
 .idea/
