chore(05-02): add Slack webhook to .env.example
- Document SLACK_WEBHOOK_URL optional setting
- Config field already existed in config.py

--- a/dolphin/.env.example
+++ b/dolphin/.env.example
@@ -13,3 +13,7 @@ REDDIT_MAX_DELAY=5.0
 GOOGLE_CREDENTIALS_JSON={"type":"service_account","project_id":"your-project",...}
 # Get sheet ID from URL: https://docs.google.com/spreadsheets/d/{THIS_ID}/edit
 GOOGLE_SHEETS_ID=your-spreadsheet-id-here
+
+# Optional: Slack webhook for alerts
+# Get webhook URL from: Slack App -> Incoming Webhooks -> Add New Webhook
+# SLACK_WEBHOOK_URL=https://hooks.slack.com/services/xxx/yyy/zzz
