--- a/dolphin/requirements.txt
+++ b/dolphin/requirements.txt
@@ -7,5 +7,8 @@ pydantic-settings>=2.0
 gspread>=6.0.0
 google-auth>=2.0.0
 
+# Phase 6: Data Hygiene & Reliability
+tenacity>=9.0.0
+
 # Existing dependencies (from original tracker.py)
 requests>=2.28
